syntax = "proto3";

package pb;

// The Todo service definition.
service Todo {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message ModelTodoReq {
  string text = 1;
  bool completed = 2 ;
}

message ModelTodoRes {
  string id = 1;
  string created_at = 2;
  string updated_at = 3;
  string text = 4;
  bool completed = 5 ;
}

message AddRequest {
  ModelTodoReq todo = 1;
}

message AddResponse {
  ModelTodoRes res = 1;
  string err = 2;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string err = 1;
}

message UpdateRequest {
  string id = 1;
  ModelTodoReq todo = 2;
}

message UpdateResponse {
  ModelTodoRes res = 1;
  string err = 2;
}

message ListRequest {

}

message ListResponse {
  repeated ModelTodoRes res = 1;
  string err = 2;
}